# pamfilico-admin-auth

./: .gitignore  Dockerfile.test  README.md  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml  run-tests.sh  tsconfig.json
js/: package.json  tsconfig.json
js/src/: fetch.ts  index.ts  protected.tsx  provider.tsx  token.ts
src/pamfilico_admin_auth/: __init__.py  blueprint.py  config.py  decorators.py  jwt.py  repository.py  schemas.py
test-frontend/: Dockerfile  next.config.js  package.json  tsconfig.json
test-frontend/app/: layout.tsx
test-frontend/app/admin/: layout.tsx
test-frontend/app/admin/login/: page.tsx
test-frontend/app/admin/users/: page.tsx
tests/: conftest.py  test_decorator.py  test_integration.py  test_jwt.py  test_server.py
