[tool.poetry]
name = "pamfilico-admin-auth"
version = "0.1.0"
description = "Reusable admin auth (HS256 JWT + Flask decorator + React helpers) for Pamfilico apps"
authors = ["Pamfilico"]
readme = "README.md"
packages = [{include = "pamfilico_admin_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = ">=2.0.0"
marshmallow = ">=3.0.0"
sqlalchemy = ">=1.4.44"
pyjwt = ">=2.4.0"
pamfilico-flask-core = {git = "https://github.com/pamfilico/flask-core.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
requests = ">=2.28.0"
psycopg2-binary = ">=2.9.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
